--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body class="product-body">
 <div class="product-card">
   <div class="product-img card">
-  <img src="images/image-product-desktop.jpg" alt="images\image-product-mobile.jpg">
+  <img src="images/image-product-desktop.jpg" alt="images\image-product-mobile.jpg" class="img1">
+  <img src="images\image-product-mobile.jpg" alt="iimages/image-product-desktop.jpg" class="img2">
 </div>
 <div class="product-description card">
   <div class ="product-category">
